# aros

./: README.md  pyproject.toml
aros/: __init__.py  __main__.py  checks.py
tests/: test_checks.py
